--- a/posts/2019-02-21-Fanfou-Digest-2019.md
+++ b/posts/2019-02-21-Fanfou-Digest-2019.md
@@ -228,6 +228,32 @@ Week 8
 「所有年轻人最终会迎来属于他们的告别时刻。他们会留下黑暗中的影子。而太阳会升起来，他们会继续醉酒、会继续做梦、会继续奔向永恒的遗忘。 而更年轻的人会继续长大，会在时间的废墟里认出诅咒般的祝福。」
 @NeverTilt at 2019-02-24
 
+
+Week 9
+
+据说孩子来到这个世界，总有一段时间会疯狂测试自己的边界和周围人的底线，摸到线也就消停了，以后知道有条线在那儿。若一直得不到反馈，或无法理解记不住，则一直作死下去，这是生物拓展生存空间的本能。
+@gravity0 at 2019-03-04
+
+遗忘是个终极解决方案。粗暴且有效。其粗暴令人无奈，其有效值得感激。
+@东东枪 at 2019-03-04
+
+很多人谈恋爱的初衷是「空虚孤独的时候有人陪伴」，却没有料到代价是「正常的社交和娱乐全都被占满，all turns to be有人陪伴着的空虚孤独」。#抄台词#
+@Marskay at 2019-03-04
+
+我有时很晚才睡 那是我躲藏的地方
+@25岁 at 2019-03-04
+
+为什么说谈恋爱/相亲/认识新人的过程很累，在由浅入深的交往过程中，开始的百分之八十的交流都是无效沟通，没办法达到深层的交流。两个人就生活工作和娱乐模式做意见交换而已，双方不敢轻易谈论三观和历史。很多时候我们抵触认识新人是时间成本很大程度上最终都打了水漂。
+@干杯呗 at 2019-03-04
+
+「我喜欢城市，喜欢萦绕着烟火气和雾色的街，我喜欢恋人们走过的广场，喜欢图书馆，地铁站，公园门口打着伞的姑娘，喜欢在喧哗的人群中孤身一人的感觉。也许我是个俗气透顶的人，但我觉得城市是最浪漫的地方，远胜孤寒的高原，杳无人烟的旷野，远胜那些所谓的远方，远胜那些被文字粉饰的粗鲁和狂野。」
+@呼吸真麻烦 at 2019-03-04
+
+真的「极度渴望成功」的人其实并不多，符合后半句「愿付非凡代价」的就更少了。
+@王兴 at 2019-03-04
+
+
+
 </pre>
 
 
